updated spacing + fixed missing slider value in updatecard

--- a/front-end/src/common/card-editor/CardEditor.css
+++ b/front-end/src/common/card-editor/CardEditor.css
@@ -98,7 +98,7 @@ input {
 
 .CardEditor__sliderContainer {
   width: 90%;
-  /* margin: 0.5em 0; */
+  padding: 0.5em 0;
 }
 
 .CardEditor__submit {
