--- a/front-end/src/views/account_page/AccountPage.css
+++ b/front-end/src/views/account_page/AccountPage.css
@@ -56,8 +56,8 @@
   display: flex;
   font-size: 20px;
   color: #396bba;
-  opacity: 80%;
   justify-content: center;
+  height: 1em;
 }
 
 .account-deck-list {
